--- a/src/app/features/product-page/reserve/reserve.component.html
+++ b/src/app/features/product-page/reserve/reserve.component.html
@@ -1,7 +1,7 @@
 <div class="availability-checker"> 
   <div class="input-box">
     <mat-form-field appearance="outline" class="form-field">
-      <mat-label class="label">Select dates to reserve</mat-label>
+      <mat-label class="label">Select up to 5 days to reserve</mat-label>
       <mat-date-range-input
         [rangePicker]="picker"
         [min]="minDate"
