adjust photos sizes and cleanup

--- a/src/app/home/homepage/custom/custom.component.html
+++ b/src/app/home/homepage/custom/custom.component.html
@@ -12,9 +12,11 @@
             </p>
             <button class="button-theme green-background">Shop Custom</button>
         </section>
-        <section class="custom-right-container">
-            <img class="custom-image" src="/images/custom-signage.jpg">
-            <p class="footer cursive-font red-font">Made with Love</p>
-        </section>
+
+        <picture class="custom-right-container">
+          <source srcset="/images/custom-signage.webp" type="image/webp">
+          <img class="custom-image" src="/images/custom-signage.png">
+        </picture>
+
     </div>
 </body>
