--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -2,9 +2,12 @@
 
     <app-error-banner></app-error-banner>
 
-    <div class="shop-image-container">
-        <img class="shop-image" src="/images/shop.png">
-    </div>
+    <picture class="shop-image-container">
+        <source srcset="/images/shop.webp" type="image/webp">
+        <img class="shop-image" src="/images/shop.png" alt="Shop Banner">
+    </picture>
+
+
     <div class="shop-container">
 
         <section class="products-list-banner">
