--- a/src/app/home/homepage/about/about.component.html
+++ b/src/app/home/homepage/about/about.component.html
@@ -1,9 +1,11 @@
 <body>
-  <!-- <span class="red-box red-background"></span> -->
   <div class="container">
-      <section class="custom-left-container">
-          <img class="custom-image" src="/images/about-me.jpg">
-      </section>
+
+      <picture class="custom-left-container">
+          <source srcset="/images/about-me.webp" type="image/webp">
+          <img class="custom-image" src="/images/about-me.png">
+      </picture>
+
       <section class="custom-right-container">
         <p class="cursive-font title-name red-font">Hi, I'm Cass</p>
         <p class="page-title">FOUNDER & ARTIST</p>
