--- a/src/app/home/homepage/hero/hero.component.html
+++ b/src/app/home/homepage/hero/hero.component.html
@@ -1,9 +1,12 @@
 <body>
 
 <section class="tan-background hero-container">
-    <div class="image-side">
-        <img class="hero-image" src="/images/hero.jpeg">
-    </div>
+
+    <picture class="image-side">
+        <source srcset="/images/hero.webp" type="image/webp">
+        <img class="hero-image" src="/images/hero.png">
+    </picture>
+
     <div class="text-side">
         <div class="flower-text-container">
             <img class="flower-image" src="/images/flower.png">
