--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,68 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
 
+/***********************************
+***         Philosopher          *** 
+************************************/
+@font-face {
+  font-family: 'Philosopher';
+  src: url('/assets/fonts/Philosopher/Philosopher-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Philosopher';
+  src: url('/assets/fonts/Philosopher/Philosopher-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Philosopher';
+  src: url('/assets/fonts/Philosopher/Philosopher-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Philosopher';
+  src: url('/assets/fonts/Philosopher/Philosopher-BoldItalic.ttf') format('truetype');
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
+
+/***********************************
+***           Roboto            *** 
+************************************/
+@font-face {
+  font-family: 'Roboto';
+  src: url('/assets/fonts/Roboto/Roboto-VariableFont_wdth,wght.ttf') format('truetype');
+  font-weight: 100 900; /* Variable font range */
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('/assets/fonts/Roboto/Roboto-Italic-VariableFont_wdth,wght.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: italic;
+  font-display: swap;
+}
+
+/***********************************
+***           Petemoss          *** 
+************************************/
+@font-face {
+  font-family: 'Petemoss';
+  src: url('/assets/fonts/Petemoss/Petemoss-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 html, body {
   margin: 0;
   padding: 0;
@@ -79,10 +141,6 @@ body { margin: 0; font-family: "Philosopher", sans-serif; font-weight: normal; }
   /* Petemoss */
   font-family: 'Petemoss', cursive;
   font-weight: normal;
-}
-
-.title-font {
-  font-family: 'Hello Paris', sans-serif;
 }
 
 
