--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -28,9 +28,9 @@
                 <p class="subtitle">event rentals</p>
             </div>
             <div class="icons">
-                <img class="logo" src="/images/instagram.png" alt="instagram icon">
-                <img class="logo" src="/images/email.png" alt="email icon">
-                <img class="logo" src="/images/facebook.png" alt="facebook icon">
+                <img class="logo" src="/images/instagram.png" alt="instagram icon" (click)="routeToInstagram()">
+                <img class="logo" src="/images/email.png" alt="email icon" (click)="routeToEmail()">
+                <img class="logo" src="/images/facebook.png" alt="facebook icon" (click)="routeToFacebook()">
             </div>
         </div>
     </div>
