--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -61,6 +61,11 @@ footer {
     width: 40px;
 }
 
+.logo:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
 .bottom-section {
     padding: 0;
     margin: 0;
