add blockoutDate functionality

--- a/src/app/backoffice/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/backoffice/admin-dashboard/admin-dashboard.component.html
@@ -11,6 +11,7 @@
                 <a routerLink="reservations" class="links">ORDERS</a>
                 <a routerLink="products" class="links">PRODUCTS</a>
                 <a routerLink="reviews" class="links">REVIEWS</a>
+                <a routerLink="blockout-dates" class="links">BLOCKOUTS</a>
             </div>
             <div class="frontoffice-container sidebar-container">
                 <a routerLink="/" class="links">FRONT OFFICE</a>
