fix product api

--- a/src/app/backoffice/admin-shared/admin-add-product/admin-add-product.component.html
+++ b/src/app/backoffice/admin-shared/admin-add-product/admin-add-product.component.html
@@ -26,7 +26,7 @@
                     <div class="numbers-container">
                         <mat-form-field appearance="outline" class="input-item">
                             <mat-label>Count</mat-label>
-                            <input matInput class="input-box" type="number" placeholder="Add Item Count" [(ngModel)]="product.count" name="count" required>
+                            <input matInput class="input-box" type="number" placeholder="Add Item Quantity" [(ngModel)]="product.quantity" name="quantity" required>
                         </mat-form-field>
 
                         <mat-form-field appearance="outline" class="input-item">
