--- a/src/app/backoffice/admin-shared/admin-product-box/admin-product-box.component.html
+++ b/src/app/backoffice/admin-shared/admin-product-box/admin-product-box.component.html
@@ -67,7 +67,7 @@
             </div>
             <div class="form-group">
                 <label>Count:</label>
-                <input [(ngModel)]="editableProduct.count" type="number" />
+                <input [(ngModel)]="editableProduct.quantity" type="number" />
             </div>
         </div>
         <div class="form-group">
