--- a/src/app/features/product-page/product-page.component.css
+++ b/src/app/features/product-page/product-page.component.css
@@ -147,7 +147,7 @@
   display: flex;
   flex-direction: column;
   margin: 35px 0 0 0;
-  visibility: hidden;
+  /* visibility: hidden; */
 }
 
 .quantity {
