--- a/src/app/features/product-page/reserve/reserve.component.css
+++ b/src/app/features/product-page/reserve/reserve.component.css
@@ -15,6 +15,16 @@ mat-hint {
     line-height: 1;
 }
 
+.info-message-container {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    min-height: 1.2em;
+}
+.info-message {
+    font-size: 0.85rem;
+}
+
 .label, .input {
     font-size: 14px;
     color: gray;
