fix middle date avalibility bug

--- a/src/app/features/product-page/reserve/reserve.component.css
+++ b/src/app/features/product-page/reserve/reserve.component.css
@@ -41,3 +41,9 @@ mat-hint {
  .reserve-button:hover {
     cursor: pointer;
  }
+
+ .reserve-button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+    pointer-events: none;
+ }
