--- a/src/app/features/product-page/reserve/reserve.component.html
+++ b/src/app/features/product-page/reserve/reserve.component.html
@@ -41,9 +41,19 @@
     </mat-form-field>
     
   </div>
-  <button class="reserve-button button-theme green-background white-font"
-    (click)="onCartClick()">
-    ADD TO CART
-</button> 
+  <span
+    [matTooltip]="showUnavailableTooltip ? 'Some of the dates you selected are unavailable.' : ''"
+    matTooltipShowDelay="100"
+    [matTooltipDisabled]="!showUnavailableTooltip"
+  >
+    <button
+      class="reserve-button button-theme green-background white-font"
+      (click)="onCartClick()"
+      [disabled]="!isDateRangeValid()"
+      type="button"
+    >
+      ADD TO CART
+    </button>
+  </span>
 
 </div>
