--- a/src/app/cart/checkout/checkout.component.html
+++ b/src/app/cart/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<body *ngIf="!cartEmpty" class="white-background">
+<body class="white-background">
   <div class="title-container">
     <img src="/images/checkout.png" class="title">
   </div>
