replace hard coded values with constants

--- a/src/app/cart/success-page/success-page.component.html
+++ b/src/app/cart/success-page/success-page.component.html
@@ -14,7 +14,7 @@
             <div class="step-text">
                 <p class="step-title">Confirmation Email</p>
                 <p class="step-description">
-                    You will receive a confirmation email within 3-5 business days from finaltouchco.info&#64;gmail.com. 
+                    You will receive a confirmation email within 3-5 business days from {{email}}. 
                     Please check your spam folder if you dont see the email within 5 days.
                 </p>
             </div>
