--- a/src/app/home/homepage/contact-me/contact-me.component.html
+++ b/src/app/home/homepage/contact-me/contact-me.component.html
@@ -2,7 +2,7 @@
     <div class="contact-me">
         <p>
             <!-- We’re always happy to help and love being part of what makes your day memorable.  -->
-            Reach out anytime at finaltouchco.info&#64;gmail.com — we can’t wait to chat!
+            Reach out anytime at {{email}} — we can’t wait to chat!
         </p>
     </div>
 </body>
