--- a/src/app/cart/checkout/checkout.component.html
+++ b/src/app/cart/checkout/checkout.component.html
@@ -56,7 +56,7 @@
       <span [innerHTML]="partialSuccessMessage"></span>
     </div>
 
-    <button type="submit" [disabled]="checkoutForm.invalid || loading || !checkoutForm.get('agreedToTerms')?.value">
+    <button class="submit-button" type="submit" [disabled]="checkoutForm.invalid || loading || !checkoutForm.get('agreedToTerms')?.value">
       {{ loading ? 'Processing...' : 'Submit Reservation' }}
     </button>
 
