--- a/src/app/shared/error-banner/error-banner.component.css
+++ b/src/app/shared/error-banner/error-banner.component.css
@@ -2,13 +2,14 @@
     position: fixed;
     top: 0;
     left: 0;
-    padding: 1rem;
+    padding: 2%;
     text-align: center;
     font-weight: 600;
     z-index: 1000;
     color: white;
     border-radius: 0;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    width: 98%;
   }
   
   .banner.info {
