--- a/src/app/backoffice/admin-blockout-dates/admin-blockout-dates.css
+++ b/src/app/backoffice/admin-blockout-dates/admin-blockout-dates.css
@@ -24,13 +24,12 @@ body {
 }
 
 .reviews-stats-container {
-    padding: 0px 25px 0px 25px;
+    padding: 10px 25px;
     margin: 20px 20px 20px 20px;
-    box-shadow: 2px 4px 6px 2px rgba(0, 0, 0, 0.1);
-    border-radius: 6px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 15px;
+    background-color: #b6c9b3;
 }
 
 .add-review-container {
