--- a/src/app/backoffice/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/backoffice/admin-dashboard/admin-dashboard.component.css
@@ -3,6 +3,7 @@ body, html {
     margin: 0;
     overflow: hidden;
     color: #454545;
+    background-color: #F4F4F4;
 }
 
 .container {
@@ -15,7 +16,6 @@ body, html {
     flex-direction: column;
     gap: 15px;
     padding: 0px 30px 30px 30px;
-    background-color: #c6ced6;
     width: 150px;
     flex-shrink: 0;
 }
@@ -36,7 +36,6 @@ body, html {
     flex-grow: 1;
     overflow-y: auto;
     padding: 20px;
-    background-color: #FAFAF5;
 }
 
 .links {
@@ -102,8 +101,7 @@ body, html {
     display: grid;
     grid-template-columns: 2fr 2fr 2fr 3fr;
     background-color: #b6c9b3;
-    width: 85%;
-    border-radius: 6px;
+    width: 75%;
 }
 
 .number-title {
@@ -122,8 +120,9 @@ body, html {
 }
 
 .buttons-container {
-    width: 15%;
+    width: 25%;
     gap: 10px;
+
 }
 
 .numbers-subcontainer {
@@ -143,7 +142,7 @@ body, html {
     /* flex-direction: column; */
     padding: 20px;
     margin-top: 15px;
-    border-radius: 8px;;
+    /* border-radius: 8px;; */
 }
 
 .reservations-info {
@@ -154,6 +153,13 @@ body, html {
     font-size: 20px;
 }
 
+.blockout-item {
+  display: flex;
+  gap: 5%;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+}
 
 .upcoming-reservation-box, .upcoming-reservation-header {
     display: grid;
@@ -221,39 +227,42 @@ body, html {
 
   .tasks-title {
     text-align: center;
-    font-size: 20px;
+    font-size: 1.15rem;
   }
 
   .tasks-container {
     width: 55%;
     background-color: rgb(227, 227, 227);
-    border-radius: 8px;
     margin-bottom: 50px;
     padding: 0px 15px 15px 15px;
   }
 
-  .errors-container {
+  .blockout-container {
     margin-left: auto;
     text-align: center;
     justify-content: right;
     align-items: end;
-    width: 40%;
+    width: 37%;
     background-color: rgb(227, 227, 227);
-    border-radius: 8px;
     margin-bottom: 50px;
+    padding: 0px 15px 15px 15px;
+  }
+
+  .blockout-subtitle {
+    text-align: center;
+    font-size: 1.15rem;
   }
 
   .tasks-item {
     display: grid;
     grid-template-columns: 1.75fr 3fr 1fr 3.5fr 2fr;
-    padding: 5px;
-    border-radius: 8px;
+    padding: 0px;
+    margin: 0px;
   }
 
   .task-item {
     display: flex;
     align-items: center;
-    font-size: 14px;
   }
 
   .task-item-title {
@@ -264,4 +273,6 @@ body, html {
   .tasks-line {
     border: none;
     border-top: 1px solid rgb(212, 212, 212);
+    padding: 0px;
+    margin: 0px;
   }
