--- a/src/app/backoffice/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/backoffice/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,6 @@
 <body>
     <div class="container">
-        <div class="sidebar">
+        <div class="sidebar blue-background">
             <div class="title-container sidebar-container">
                 <img class="favicon" src="favicon.ico">
                 <h2 class="title">Final Touch</h2>
@@ -87,14 +87,14 @@
 
                         <div class="chart-container">
                             <h1 class="subtitle">Upcoming Year's Stats:</h1>
-                            <canvas id="myChart"></canvas>
+                            <canvas #myChart></canvas>
                         </div>
                     </div> 
 
                     <div class="todo-container">
 
                         <div class="tasks-container">
-                        <h1 class="tasks-title">Tasks ({{ tasks.size }})</h1>
+                        <p class="tasks-title">TASKS ({{ tasks.size }})</p>
                         <hr class="tasks-line">
                         <div class="tasks-list" *ngFor="let task of tasks | keyvalue">
                             <div class="tasks-item">
@@ -133,8 +133,14 @@
                         </div>
                         </div>
 
-                        <div class="errors-container">
-                            <h1 class="subtitle">Errors</h1>
+                        <div class="blockout-container">
+                            <p class="blockout-subtitle">BLOCKOUT DATES</p>
+                            <hr class="tasks-line">
+                                <div *ngFor="let blockout of blockouts" class="blockout-item">
+                                    <p class="blockout-item-description">{{ blockout.reason }}</p>
+                                    <p class="blockout-item-title">{{ displayDate(blockout.dates[0]) }} - {{ displayDate(blockout.dates[blockout.dates.length-1]) }}</p>
+                                    <hr class="tasks-line">
+                                </div>
                         </div>
                     </div>
                 </div>
