--- a/src/app/backoffice/admin-products/admin-products.component.css
+++ b/src/app/backoffice/admin-products/admin-products.component.css
@@ -24,13 +24,12 @@ body {
 }
 
 .order-stats-container {
-    padding: 0px 25px 0px 25px;
+    padding: 10px 25px;
     margin: 20px 20px 20px 20px;
-    box-shadow: 2px 4px 6px 2px rgba(0, 0, 0, 0.1);
-    border-radius: 6px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 15px;
+    background-color: #b6c9b3;
 }
 
 .add-reservation-container {
@@ -65,7 +64,7 @@ body {
 
 .products-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .refresh-button-container {
