--- a/src/app/backoffice/admin-reviews/admin-reviews.component.css
+++ b/src/app/backoffice/admin-reviews/admin-reviews.component.css
@@ -24,13 +24,12 @@ body {
 }
 
 .reviews-stats-container {
-    padding: 0px 25px 0px 25px;
+    padding: 10px 25px;
     margin: 20px 20px 20px 20px;
-    box-shadow: 2px 4px 6px 2px rgba(0, 0, 0, 0.1);
-    border-radius: 6px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 15px;
+    background-color: #b6c9b3;
 }
 
 .add-review-container {
@@ -82,11 +81,12 @@ body {
 }
 
 .review-box {
+    background: white;
+    border: 1px solid rgb(222, 222, 222);
     border-radius: 4px;
     width: 100%;
-    height: 200px;
+    height: 300px;
     text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin: 0;
     position: relative;
 }
