--- a/src/app/backoffice/admin-shared/admin-add-product/admin-add-product.component.css
+++ b/src/app/backoffice/admin-shared/admin-add-product/admin-add-product.component.css
@@ -1,18 +1,33 @@
 /* Overlay background */
   
-  /* Form body spacing */
-  .form-section {
-    display: flex;
-    gap: 16px; /* Adds space between each form field */
-  }
+.create-button {
+  min-width: 150px;
+  min-height: 50px;
+  background-color: #e8e8e8;
+  border-radius: 0px;
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.create-button:focus,
+.create-button:active,
+.create-button:hover {
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+  background-color: #dbdada;
+}
+
+/* Form body spacing */
+.form-section {
+  display: flex;
+  gap: 16px; /* Adds space between each form field */
+}
 
 
-  .numbers-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
-  }
-
-  input {
-    background-color: red;
-  }
+.numbers-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+}
