--- a/src/app/backoffice/admin-shared/admin-add-review/admin-add-review.component.css
+++ b/src/app/backoffice/admin-shared/admin-add-review/admin-add-review.component.css
@@ -1,5 +1,24 @@
 /* Overlay background */
   
+.create-button {
+  min-width: 150px;
+  min-height: 50px;
+  background-color: #e8e8e8;
+  border-radius: 0px;
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.create-button:focus,
+.create-button:active,
+.create-button:hover {
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+  background-color: #dbdada;
+}
+
   .form-section {
     display: flex;
     gap: 16px;
