--- a/src/app/backoffice/admin-shared/admin-reservation-box/admin-reservation-box.component.html
+++ b/src/app/backoffice/admin-shared/admin-reservation-box/admin-reservation-box.component.html
@@ -1,5 +1,7 @@
-<body>
-    <div class="reservation-box" (click)="this.openExpandedBox()">
+<body (click)="onDocumentClick($event)">
+    <div class="reservation-box" 
+         [ngClass]="{'dropdown-open': showStatusDropdown}"
+         (click)="this.toggleExpandedBox()">
         <div class="status-box-container subcontainer">
             <div class="status-box"
                 [ngClass]="{
@@ -9,169 +11,147 @@
                     'yellow-background': reservation.status == 'pending'
                 }"
                 (click)="toggleStatusDropdown($event)">
-                <p class="status">{{ reservation.status }}</p>
-            </div>
-            <div *ngIf="showStatusDropdown" class="status-dropdown">
-                <select [(ngModel)]="editableReservation.status" (change)="updateReservationStatus(editableReservation.status)">
-                    <option value="active">Active</option>
-                    <option value="canceled">Canceled</option>
-                    <option value="fulfilled">Fulfilled</option>
-                    <option value="pending">Pending</option>
-                </select>
+                <p *ngIf="!showStatusDropdown" class="status">{{ reservation.status }}</p>
+                <div *ngIf="showStatusDropdown" 
+                     class="custom-dropdown"
+                     (click)="$event.stopPropagation()">
+                    <div class="dropdown-option" 
+                         *ngFor="let status of ['active', 'canceled', 'fulfilled', 'pending']"
+                         (click)="updateReservationStatus(status)"
+                         [class.selected]="status === reservation.status">
+                        {{ status }}
+                    </div>
+                </div>
             </div>
         </div>
         <div class="name-container subcontainer">
-            <div *ngIf='!editMode else editName'>
-                <p class="name">{{ reservation.name }}</p>
-            </div>
-            <ng-template #editName class="name-container">
-                <input type="text" [(ngModel)]="editableReservation.name"/>
-            </ng-template>
+            <p class="name">{{ reservation.name }}</p>
         </div>
-        <div class="dates-container subcontainer">
+        <div class="date-container subcontainer">
             <p class="dates">{{ displayDates() }}</p>
         </div>
-        <div class="contact-container-phone subcontainer">
-            <div *ngIf='!editMode else editContactInfo'>
-                <p class="phonenumber">{{ reservation.phoneNumber }}</p>
-            </div>
-            <ng-template #editContactInfo>
-                <input type="tel" [(ngModel)]="editableReservation.phoneNumber">
-            </ng-template>
+        <div class="contact-container-price subcontainer">
+            <p class="price">${{ reservation.price }}</p>
         </div>
         <div class="contact-container-email subcontainer">
-            <div *ngIf='!editMode else editContactInfo'>
-                <p class="email">{{ reservation.email }}</p><br>
-            </div>
-            <ng-template #editContactInfo>
-                <input type="email" [(ngModel)]="editableReservation.email">
-            </ng-template>
+            <p class="email">{{ reservation.email }}</p><br>
         </div>
-        <div class="invoice-container updates-container subcontainer" 
-        [ngClass]="{
-            'green-circle': reservation.invoiceStatus === 'sent',
-            'red-circle': reservation.invoiceStatus === 'not sent'
-            }">
-            <p class="updates-item">
+        <div class="invoice-container updates-container subcontainer">
+            <p class="updates-item"
+            [ngClass]="{
+                'late-highlighted': reservation.invoiceStatus == 'not sent' && isStatusLate(reservation.dates[0], SEND_INVOICE_DAYS)
+                }">
                 {{ reservation.invoiceStatus }}
             </p>
         </div>
-        <div class="payment-container updates-container subcontainer"
-        [ngClass]="{
-            'green-circle': reservation.invoiceStatus === 'sent',
-            'red-circle': reservation.invoiceStatus === 'not sent'
-            }">
+        <div class="payment-container updates-container subcontainer">
             <p class="updates-item"
-                [ngClass]="{
-                    'green-circle': reservation.invoiceStatus === 'recieved',
-                    'red-circle': reservation.invoiceStatus == 'not recieved'
+            [ngClass]="{
+                'late-highlighted': reservation.paymentStatus == 'not received' && isStatusLate(reservation.dates[0], PAYMENT_DUE_DAYS)
                 }">
                 {{ reservation.paymentStatus }}
-            </p>
-        </div>
-        <div class="deposit-container updates-container subcontainer"
-        [ngClass]="{
-            'green-circle': reservation.invoiceStatus === 'sent',
-            'red-circle': reservation.invoiceStatus === 'not sent'
-            }">
-            <p class="updates-item"
-                [ngClass]="{
-                    'green-circle': reservation.invoiceStatus === 'returned',
-                    'red-circle': reservation.invoiceStatus == 'not returned'
-                }">
-                {{ reservation.depositStatus }}
             </p>
         </div>
     </div>
 
     <div class="expanded-container" *ngIf="this.expandBox">
-        <p class="product-id">id: {{ reservation.reservationId }}</p>
-        <div class="expanded-product-box">
-            <div class="pickup-return-box box">
-                <p class="box-title">PICKUP \ RETURN</p>
-                <div *ngIf="!editMode; else editPickupReturn">
-                    <p class="light">Pickup Date: </p>
-                    <p class="high-line">{{ displayDate(reservation.dates[0]) }}</p>
-                    <p class="light">Return Date: </p>
-                    <p class="high-line">{{ displayDate(reservation.dates[reservation.dates.length-1]) }}</p>
-                    <p class="light">Pickup Notes:</p>
-                    <p class="high-line">{{ reservation.pickupNotes }}</p>
-                </div>
-                <ng-template #editPickupReturn>
-                    <mat-date-range-input [formGroup]="datesForm" [rangePicker]="picker">
-                        <input matStartDate formControlName="start" placeholder="{{ displayDate(reservation.dates[0]) }}">
-                        <input matEndDate formControlName="end" placeholder="{{ displayDate(reservation.dates[reservation.dates.length-1]) }}">
-                        </mat-date-range-input>
-                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-date-range-picker #picker></mat-date-range-picker>
-                            
-                    <p class="light">Pickup Notes:</p>
-                    <textarea [(ngModel)]="editableReservation.pickupNotes"></textarea>
-                </ng-template>
+        <div class="main-expanded-content">
+            <div class="customer-info-container">
+                <h3 class="customer-info">Customer Info</h3>
+                <p>Id: {{ reservation.reservationId }}</p>
+                <p>Name: {{ reservation.name }}</p>
+                <p>Phone: {{ reservation.phoneNumber }}</p>
+                <p>email: {{ reservation.email }}</p>
             </div>
-
-            <div class="items-payment-box box">
-                <p class="box-title">ITEMS AND PAYMENT</p>
-                <div>
-                    <div class="content">
-                        <div class="product-side">
-                            <div *ngFor="let item of this.reservation.items">
-                                <div *ngIf="!editMode; else editItemFields">
-                                    <p>{{ item.name }} - {{ item.quantity }} quantity</p>
-                                    <p class="product-info">&nbsp;&nbsp; id: {{ item.productId }}</p>
-                                    <p class="product-info">&nbsp;&nbsp; price: ${{ item.price }}, deposit: ${{ item.deposit }}</p>
-                                </div>
-                                <ng-template #editItemFields>
-                                    <p>{{ item.name }} - <input type="number" [(ngModel)]="item.quantity" /> quantity</p>
-                                    <p class="product-info">&nbsp;&nbsp; id: {{ item.productId }}</p>
-                                    <p class="product-info">&nbsp;&nbsp; price: $<input type="number" [(ngModel)]="item.price" />, deposit: $<input type="number" [(ngModel)]="item.deposit" /></p>
-                                </ng-template>
-                            </div>
-                        </div>
-                        <div class="price-side">
-                            <p>PRICE: ${{ displayTotalPrice() }}</p>
-                            <p>DEPOSIT: ${{ displayTotalDeposit() }}</p>
-                        </div>
-                    </div>
-                    <p class="invoice-price">INVOICE PRICE: ${{ displayTotalPrice() + displayTotalDeposit() }}</p>
-                </div>
+            <div class="notes-container">
+                <h4>Customer Notes:</h4>
+                <p>{{ reservation.customerNotes }}</p>
+                <h4>My Notes:</h4>
+                <p>{{ reservation.myNotes }}</p>
             </div>
-
-            <div class="notes-box box">
-                <p class="box-title">NOTES</p>
-                <p class="light">Customer Notes:</p>
-                <p class="high-line" *ngIf="!editMode; else editCustomerNotes">{{ reservation.customerNotes }}</p>
-                <ng-template #editCustomerNotes>
-                    <textarea [(ngModel)]="editableReservation.customerNotes"></textarea>
-                </ng-template>
-                <p class="light">My Notes:</p>
-                <p class="high-line" *ngIf="!editMode; else editMyNotes">{{ reservation.myNotes }}</p>
-                <ng-template #editMyNotes>
-                    <textarea [(ngModel)]="editableReservation.myNotes"></textarea>
-                </ng-template>
+            <div class="dates-container">
+                <p><b>Send Invoice:</b> {{ displayDateFrom(reservation.dates[0], SEND_INVOICE_DAYS) }}</p>
+                <p><b>Payment Due:</b> {{ displayDateFrom(reservation.dates[0], PAYMENT_DUE_DAYS) }}</p>
+                <p><b>Pickup On: </b> {{ displayDate(reservation.dates[0]) }}</p>
+                <p><b>Return On: </b> {{ displayDate(reservation.dates[reservation.dates.length-1]) }}</p>
             </div>
-
-            <div class="dates-box box">
-                <p class="box-title">DATES</p>
-                <p class="light">Send Invoice:</p>
-                <p class="high-line">{{ displayDateFrom(reservation.dates[0], -100) }}</p>
-                <p class="light">Payment Due:</p>
-                <p class="high-line">{{ displayDateFrom(reservation.dates[0], -90) }}</p>
-                <p class="light">Return Deposit:</p>
-                <p class="high-line">{{ displayDateFrom(reservation.dates[0], 10) }}</p>
+        </div>
+        <div class="products-expanded-list">
+            <!-- for each product, display photo, name, price, and qty -->
+            <div *ngFor="let item of reservation.items; let i = index" 
+                 class="item-box"
+                 [ngClass]="{'even-row': i % 2 === 0, 'odd-row': i % 2 === 1}">
+                <img src="/images/item-image.png" alt="Item image" class="product-image">
+                <p class="product-name item-info">{{ item.name }}<br><p class="item-id">{{ item.productId }}</p></p>
+                <p class="product-price item-info">Price: ${{ item.price }}</p>
+                <p class="product-quantity item-info">Quantity: {{ item.quantity || 1 }}</p>
+                <p class="subtotal item-info">Subtotal: ${{ item.price * item.quantity || 20}}</p>
             </div>
-        </div>  
-
-        <div *ngIf="expandBox" class="action-buttons">
-            <div class="buttons-not-edit">
-                <button *ngIf="!editMode" class="edit-button" (click)="toggleEditMode()">Edit</button>
-                <button *ngIf="!editMode" class="close-button" (click)="closeExpandedBox()">Close</button>
-            </div>
-            <div class="buttons-edit">
-                <button *ngIf="editMode" class="save-button" (click)="saveChanges()">Save</button>
-                <button *ngIf="editMode" class="cancel-button" (click)="cancelChanges()">Cancel</button>
+            <div class="total-price" 
+               [ngClass]="{'even-row': reservation.items.length % 2 === 0, 'odd-row': reservation.items.length % 2 === 1}">
+               <button class="edit-button" (click)="openEditMode()">edit</button>
+               <span class="total-price-text">Total Price: ${{ displayTotalPrice() }}</span>
             </div>
         </div>
     </div>
-
 </body>
+
+<!-- Edit Popup -->
+<!-- <div *ngIf="editMode" class="edit-popup form-class">
+    <div class="popup-content">
+        <h2>Edit Reservation</h2>
+        <div class="form-group">
+            <label>Name:</label>
+            <input [(ngModel)]="Reservation.name" type="text" />
+        </div>
+        <div class="prices-container">
+            <div class="form-group">
+                <label>Price:</label>
+                <input [(ngModel)]="editableProduct.price" type="number" />
+            </div>
+            <div class="form-group">
+                <label>Deposit:</label>
+                <input [(ngModel)]="editableProduct.deposit" type="number" />
+            </div>
+            <div class="form-group">
+                <label>Count:</label>
+                <input [(ngModel)]="editableProduct.quantity" type="number" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label>Description:</label>
+            <textarea [(ngModel)]="editableProduct.description"></textarea>
+        </div>
+        <div class="form-group">
+            <label>Status:</label>
+            <select [(ngModel)]="editableProduct.active">
+                <option value="true">Active</option>
+                <option value="false">Inactive</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Tags (comma-separated):</label>
+            <input [(ngModel)]="tagsInput" type="text" placeholder="e.g., signage, custom, rustic" />
+        </div>
+        <div class="form-group">
+            <label>Material:</label>
+            <input [(ngModel)]="editableProduct.material" type="text" />
+        </div>
+        <div class="form-group">
+            <label>Image URL:</label>
+            <input [(ngModel)]="editableProduct.imageUrl" type="text" />
+        </div>
+        <div class="form-group custom-checkbox-group">
+            <label class="custom-checkbox-label">
+                <input type="checkbox" [(ngModel)]="editableProduct.custom" name="isCustom" />
+                <span class="custom-checkbox-box"></span>
+                Custom Item
+            </label>
+        </div>
+        <div class="edit-button-container">
+            <button (click)="saveProduct()">Save</button>
+            <button (click)="closeProductEditor()">Cancel</button>
+            <button (click)="deleteProduct()">Delete</button>
+        </div>
+    </div>
+</div> -->
