fix (click) and routerLink issue with tabs

--- a/src/app/cart/cart-item/cart-item.component.css
+++ b/src/app/cart/cart-item/cart-item.component.css
@@ -33,7 +33,7 @@
     font-weight: bold;
   }
 
-  .product-title:hover {
+  .product-title:hover, .cart-item-image:hover {
     cursor: pointer;
   }
     
