--- a/src/app/home/homepage/custom/custom.component.html
+++ b/src/app/home/homepage/custom/custom.component.html
@@ -10,7 +10,7 @@
                 and let us help bring your vision to life with quality materials and 
                 a personal touch.            
             </p>
-            <button class="button-theme green-background">Shop Custom</button>
+            <button class="button-theme green-background" (click)="goToCustomShop($event)">Shop Custom</button>
         </section>
 
         <picture class="custom-right-container">
