--- a/src/app/home/homepage/faqs/faqs.component.html
+++ b/src/app/home/homepage/faqs/faqs.component.html
@@ -1,4 +1,4 @@
-<body class="green-background">
+<body class="green-background topDiv">
 
     <div class="container">
         <div class="title-container">
