--- a/src/app/home/homepage/hero/hero.component.html
+++ b/src/app/home/homepage/hero/hero.component.html
@@ -14,7 +14,7 @@
         </div>
         <h1>Elevate Your Event with<br>Beautiful, Earth-Friendly<br>Decor Rentals
         </h1>
-        <button (click)="routeToShop()" class="button-theme green-background">shop now</button>
+        <button (click)="routeToShop($event)" class="button-theme green-background">shop now</button>
         <br><br>
     </div>
 </section>
