--- a/src/app/inspo/inspo.component.html
+++ b/src/app/inspo/inspo.component.html
@@ -1,4 +1,4 @@
-<body class="white-background">
+<body class="white-background topDiv">
     <app-error-banner></app-error-banner>
     
     <section *ngIf="inspoOpen" class="open-section">
