--- a/src/app/features/product-box/product-box.component.html
+++ b/src/app/features/product-box/product-box.component.html
@@ -1,4 +1,4 @@
-<div class="product-item" (click)="goToProductPage()">
+<a [routerLink]="['/product', product.productId]" class="product-item">
     <div class="image-placeholder">
       <div class="image-container">
           <p *ngIf="product.custom" class="custom-text white-font secondary-font" alt="Custom Icon">CUSTOM</p>
@@ -12,4 +12,4 @@
       <!-- <p class="info-count">{{ product.count }} avaliable</p> -->
       <p class="info-price black-font">${{ product.price }}</p>
     </div>
-</div>
+</a>
