add form guards

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -110,11 +110,11 @@
                             <input 
                                 type="radio" 
                                 name="custom" 
-                                value="Not Custom" 
-                                [checked]="customSelection === 'Not Custom'" 
-                                (change)="updateCustom('Not Custom')" 
+                                value="Ready-made" 
+                                [checked]="customSelection === 'Ready-made'" 
+                                (change)="updateCustom('Ready-made')" 
                             /> 
-                            Not Custom
+                            Ready-made
                         </label>
                         </div>
                     </div>
