--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -2,7 +2,7 @@ body {
   flex-direction: column; 
 }
 
-body, .shop-image-container, .shop-image, .color-label {
+body, .shop-image-container, .shop-image {
   display: flex;
   align-items: center;
   justify-content: center;
