--- a/src/app/cart/checkout/checkout.component.html
+++ b/src/app/cart/checkout/checkout.component.html
@@ -9,17 +9,35 @@
       <div class="checkout-form">
         <div class="form-field">
           <label>Name</label>
-          <input type="text" formControlName="name" />
+          <input 
+            type="text" 
+            autocomplete="name"
+            pattern="[A-Za-z\s]+"
+            minlength="2"
+            maxlength="50"
+            required>
         </div>
 
         <div class="form-field">
           <label>Email</label>
-          <input type="email" formControlName="email" />
+          <input 
+            type="email" 
+            inputmode="email"
+            formControlName="email"
+            autocomplete="email"
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+            required/>
         </div>
 
         <div class="form-field">
           <label>Phone</label>
-          <input type="tel" formControlName="phone" />
+          <input 
+            type="tel" 
+            formControlName="phone"
+            pattern="[0-9]*"
+            inputmode="tel"
+            autocomplete="tel"
+            required/>
         </div>
 
         <div class="form-field">
