fix reservation form bug

--- a/src/app/cart/checkout/checkout.component.html
+++ b/src/app/cart/checkout/checkout.component.html
@@ -11,6 +11,7 @@
           <label>Name</label>
           <input 
             type="text" 
+            formControlName="name"
             autocomplete="name"
             pattern="[A-Za-z\s]+"
             minlength="2"
