add email verification to reservation form

--- a/src/app/backoffice/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/backoffice/admin-dashboard/admin-dashboard.component.html
@@ -45,7 +45,7 @@
                             </div>
                             <div class="revenue-container numbers-subcontainer">
                                 <p class="number-title">Total Revenue</p>
-                                <p class="number">{{ getTotalRevenue() }} $</p>
+                                <p class="number">{{ getTotalRevenue() | currency }}</p>
                             </div>
                         </div>
                         <div class="buttons-container centered">
