--- a/src/app/cart/cart-page/cart-page.component.html
+++ b/src/app/cart/cart-page/cart-page.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="cart-empty" *ngIf="cartItems.length === 0">
-    <p>There are no items in you cart... yet!</p>
+    <p>There are no items in your cart... yet!</p>
   </div>
 
   <div class="cart-full" *ngIf="cartItems.length > 0">
