fix product page scroll and photo sizing

--- a/src/app/features/product-box/product-box.component.html
+++ b/src/app/features/product-box/product-box.component.html
@@ -1,5 +1,6 @@
-<a [routerLink]="['/product', product.productId]" class="product-item">
-    <div class="image-placeholder">
+<!-- <a [routerLink]="['/product', product.productId]" class="product-item"> -->
+<a (click)="goToProduct($event)" class="product-item">
+  <div class="image-placeholder">
       <div class="image-container">
           <p *ngIf="product.custom" class="custom-text white-font secondary-font" alt="Custom Icon">CUSTOM</p>
         <!-- <img src="/images/stock_photo.png" alt="{{ product.name }}" class="product-image" (load)="onImageLoad($event)"> -->
