--- a/src/app/home/homepage/hero/hero.component.html
+++ b/src/app/home/homepage/hero/hero.component.html
@@ -12,8 +12,7 @@
             <img class="flower-image" src="/images/flower.png">
             <p class="location-text secondary-font green-font">SERVING BOISE AND THE TREASURE VALLEY</p>
         </div>
-        <h1>Elevate Your Event with<br>Beautiful, Earth-Friendly<br>Decor Rentals
-        </h1>
+        <h1 class="title">Elevate Your Event with<br>Beautiful, Earth-Friendly<br>Decor Rentals</h1>
         <button (click)="routeToShop($event)" class="button-theme green-background">shop now</button>
         <br><br>
     </div>
