--- a/src/app/home/homepage/about/about.component.css
+++ b/src/app/home/homepage/about/about.component.css
@@ -41,8 +41,8 @@ body {
 }
 
 .custom-image {
-    width: auto;
-    height: 100%;
+    /* width: auto; */
+    width: 100%;
     max-height: 600px;
     min-height: 250px;
     object-fit: contain;
@@ -98,10 +98,6 @@ body {
 }
 
 @media (max-width: 600px) {
-
-    body {
-        background: linear-gradient(to right, white 65%, #f1e3e0 35%);
-    }
 
     .container {
         display: flex;
