--- a/src/app/home/homepage/hero/hero.component.css
+++ b/src/app/home/homepage/hero/hero.component.css
@@ -23,9 +23,7 @@
 
 .hero-image {
     max-width: 450px;
-    /* width: 100%; */
-    height: 90%;
-    /* height: auto; */
+    width: 90%;
     aspect-ratio: 3/4;
 }
 
@@ -88,20 +86,17 @@ h1 {
 @media (max-width: 915px) {
 
     .hero-container {
-        padding: 1rem 3rem;
+        padding: 5rem 2rem;
+        height: auto;
     }
 
     .hero-container {
-        gap: 3rem;
+        gap: 1rem;
     }
 
     body {
         flex-direction: column;
         height: 100%;
-    }
-
-    h1 {
-        width: 80%;
     }
 
     .text-side {
@@ -116,6 +111,7 @@ h1 {
     .flower-image {
         width: 150px;
     }
+
 } 
 
 
